@@ -4,22 +4,23 @@ name := "Pelita CI"
 
 version := "0.1-SNAPSHOT"
 
-scalaVersion := "2.10.0"
+scalaVersion := "2.10.1"
 
 seq(com.github.siasia.WebPlugin.webSettings :_*)
 
 libraryDependencies ++= {
-  val liftVersion = "2.5-RC1"
+  val liftVersion = "2.5-RC2"
   Seq(
     "net.liftweb" %% "lift-webkit" % liftVersion % "compile",
-    "org.eclipse.jetty" % "jetty-webapp" % "8.1.9.v20130131" % "container,test"
+    "org.eclipse.jetty" % "jetty-webapp" % "8.1.9.v20130131" % "container,test",
+    "org.eclipse.jetty.orbit" % "javax.servlet" % "3.0.0.v201112011016" % "container,compile" artifacts Artifact("javax.servlet", "jar", "jar")
   )
 }
 
 resolvers += "Sonatype snapshots" at "http://oss.sonatype.org/content/repositories/snapshots/"
 
 libraryDependencies ++= {
-  val scalazVersion = "7.0.0-M7"
+  val scalazVersion = "7.0.0-M9"
   Seq(
     "org.scalaz" %% "scalaz-core" % scalazVersion,
     "org.scalaz" %% "scalaz-effect" % scalazVersion
@@ -27,12 +28,14 @@ libraryDependencies ++= {
 }
 
 libraryDependencies ++= {
-  val akkaVersion = "2.1.0"
+  val akkaVersion = "2.1.2"
   Seq(
   	"com.typesafe.akka" %% "akka-actor" % akkaVersion,
   	"com.typesafe.akka" %% "akka-agent" % akkaVersion,
   	"com.typesafe.akka" %% "akka-zeromq" % akkaVersion,
-  	"com.typesafe.akka" %% "akka-testkit" % akkaVersion
+  	"com.typesafe.akka" %% "akka-testkit" % akkaVersion,
+  	"com.typesafe.akka" %% "akka-slf4j" % akkaVersion,
+  	"com.typesafe.akka" %% "akka-dataflow" % akkaVersion
   )
 }
 
@@ -43,7 +46,7 @@ libraryDependencies += "org.specs2" %% "specs2" % "1.14" % "test"
 autoCompilerPlugins := true
 
 libraryDependencies <+= scalaVersion {
-  v => compilerPlugin("org.scala-lang.plugins" % "continuations" % "2.10.0")
+  v => compilerPlugin("org.scala-lang.plugins" % "continuations" % "2.10.1")
 }
 
 scalacOptions += "-P:continuations:enable"
@@ -54,17 +57,15 @@ scalacOptions += "-feature"
 
 scalacOptions += "-Xlint"
 
-libraryDependencies += "com.typesafe.akka" %% "akka-dataflow" % "2.1.0"
-
 libraryDependencies ++= List(
   // use the right Slick version here:
   "com.typesafe.slick" %% "slick" % "1.0.0",
-  "com.h2database" % "h2" % "1.3.166"
+  "com.h2database" % "h2" % "1.3.171"
 )
 
 libraryDependencies += "com.typesafe" % "config" % "1.0.0"
 
-libraryDependencies += "ch.qos.logback" % "logback-classic" % "1.0.9" % "runtime"
+libraryDependencies += "ch.qos.logback" % "logback-classic" % "1.0.11" % "runtime"
 
 libraryDependencies += "org.codehaus.janino" % "janino" % "2.6.1"
 
@@ -73,3 +74,15 @@ seq(coffeeSettings: _*)
 (resourceManaged in (Compile, CoffeeKeys.coffee)) <<= (webappResources in Compile)(_.get.head / "js")
 
 Compass.settings
+
+
+
+javaOptions +=  "-verbosegc"
+
+javaOptions +=  "-XX:+PrintGCDetails"
+
+javaOptions += "-verbosegc"
+
+javaOptions += "-Xloggc:gc.log"
+
+
